Updated time calculation and insights page

--- a/Hours/templates/index.html
+++ b/Hours/templates/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+{% include "header.html" %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Select a date</h1>
-<form action="" method ="POST" name="myform">
-    {{form.chosen_date.label}} {{form.chosen_date(class="datepicker")}} {{form.hidden_tag()}} <!-- give label for chosen_date, form class datepicker from Flask, -->
-    {{form.hours.label}}{{form.hours}}
-    {{form.submit()}} <!-- call submission form -->
-    </form>
-<h1></h1>
+
 </body>
 </html>
