--- a/Hours/templates/insights.html
+++ b/Hours/templates/insights.html
@@ -10,16 +10,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container"> <p>You generated most overtime on {{ data[2] }} by working {{ data[1] }} hours - This is a {{ data[4] }} </p> </div>
+
+<div class="container"> <p>You have worked a total of {{ totaltime[1]|float }} hours</p> </div>
+
+<div class="container"> <p>{{ viz_div|safe }} </p> </div>
+
+<div class="container"> <p>You generated most overtime on {{ overtimedata[2] }} by working {{ overtimedata[1]|float }} hours - This is a {{ overtimedata[4] }} </p> </div>
 <!-- <div class="container"> <p>The month you generated most overtime was:  </p> </div> -->
 
-<div class="container"> <p>Your average over-/ undertime is: {{ data[3] }} </p>  {% if data[3] > 1.5|float %}
+<div class="container"> <p>Your average over-/ undertime is: {{ overtimedata[3]|float }} </p>
+    {% if overtimedata[3] > 1.5|float %}
     <p>Hi there, it seems like you are making too much overtime on average. Be mindful of your work-life-balance! Make sure you contact your Manager to readjust your projects.
     If you want to learn more about our company policy on how to improve your work-life-balance please visit <a href="https://www.businessnewsdaily.com/5244-improve-work-life-balance-today.html" target="_blank"> Work-Life-Balance-Tips</a> </p>
 {% endif %} </div>
 
-<div class="container"> <p>Your total overtime is: {{ data[0] }}  </p>  {% if data[0] > 40|float %}
+<div class="container"> <p>Your total overtime is: {{ overtimedata[0]|float }}  </p>
+    {% if overtimedata[0] > 40|float %}
     <p>Dear user. You have generate more than 40 working hours in overtime. Please contact HR to create a compensation plan</p> <a href="mailto:raphael@urbanetz.ch" target="_blank" class="btn btn-primary">Email Us</a>
 {% endif %} </div>
+
 </body>
 </html>
