--- a/Hours/templates/header.html
+++ b/Hours/templates/header.html
@@ -12,10 +12,10 @@
 <body>
 <header class="d-flex justify-content-center py-3">
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="http://127.0.0.1:5000/" class="nav-link" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/erfassen" class="nav-link">Zeit erfassen</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/insights" class="nav-link">Insights</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/uebersicht" class="nav-link">Übersicht</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/home" class="nav-link" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/submission" class="nav-link">Submit Working Hours</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/insights" class="nav-link">Working Hours Insight</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/overview" class="nav-link">Day by Day Overview</a></li>
       </ul>
     </header>
 </body>
