Updated code for monthly aggregation resulting in faster performance

--- a/Hours/templates/insights.html
+++ b/Hours/templates/insights.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container"> <p>You have worked a total of {{ monthtime[12]|float }} hours in 2021 </p> </div>
+<div class="container"> <p>You have worked a total of {{ monthtime[(12)]|float }} hours in 2021 </p> </div>
 
 <div class="container"> <p>{{ viz_div|safe }} </p> </div>
 
@@ -45,63 +45,63 @@ hours for each month. At the end of the month you will see the total worked hour
       <tbody id="myTable">
         <tr>
             <td>January</td>
-            <td>{{ monthtime[0]|float }}</td>
-            <td>{{ (monthtime[0] - 160)|float }}</td>
+            <td>{{ monthtime[(0)]|float }}</td>
+            <td>{{ (monthtime[(0)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>February</td>
-            <td>{{ monthtime[1]|float }}</td>
-            <td>{{ (monthtime[1] - 160)|float }}</td>
+            <td>{{ monthtime[(1)]|float }}</td>
+            <td>{{ (monthtime[(1)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>March</td>
-            <td>{{ monthtime[2]|float }}</td>
-            <td>{{ (monthtime[2] - 160)|float }}</td>
+            <td>{{ monthtime[(2)]|float }}</td>
+            <td>{{ (monthtime[(2)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>April</td>
-            <td>{{ monthtime[3]|float }}</td>
-            <td>{{ (monthtime[3] - 160)|float }}</td>
+            <td>{{ monthtime[(3)]|float }}</td>
+            <td>{{ (monthtime[(3)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>May</td>
-            <td>{{ monthtime[4]|float }}</td>
-            <td>{{ (monthtime[4] - 160)|float }}</td>
+            <td>{{ monthtime[(4)]|float }}</td>
+            <td>{{ (monthtime[(4)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>June</td>
-            <td>{{ monthtime[5]|float }}</td>
-            <td>{{ (monthtime[5] - 160)|float }}</td>
+            <td>{{ monthtime[(5)]|float }}</td>
+            <td>{{ (monthtime[(5)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>July</td>
-            <td>{{ monthtime[6]|float }}</td>
-            <td>{{ (monthtime[6] - 160)|float }}</td>
+            <td>{{ monthtime[(6)]|float }}</td>
+            <td>{{ (monthtime[(6)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>August</td>
-            <td>{{ monthtime[7]|float }}</td>
-            <td>{{ (monthtime[7] - 160)|float }}</td>
+            <td>{{ monthtime[(7)]|float }}</td>
+            <td>{{ (monthtime[(7)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>September</td>
-            <td>{{ monthtime[8]|float }}</td>
-            <td>{{ (monthtime[8] - 160)|float }}</td>
+            <td>{{ monthtime[(8)]|float }}</td>
+            <td>{{ (monthtime[(8)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>October</td>
-            <td>{{ monthtime[9]|float }}</td>
-            <td>{{ (monthtime[9] - 160)|float }}</td>
+            <td>{{ monthtime[(9)]|float }}</td>
+            <td>{{ (monthtime[(9)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>November</td>
-            <td>{{ monthtime[10]|float }}</td>
-            <td>{{ (monthtime[10] - 160)|float }}</td>
+            <td>{{ monthtime[(10)]|float }}</td>
+            <td>{{ (monthtime[(10)] - 160)|float }}</td>
         </tr>
       <tr>
             <td>December</td>
-            <td>{{ monthtime[11]|float }}</td>
-            <td>{{ (monthtime[11] - 160)|float }}</td>
+            <td>{{ monthtime[(11)]|float }}</td>
+            <td>{{ (monthtime[(11)] - 160)|float }}</td>
         </tr>
       </tbody>
     </table>
