Updated README with completion, updated HTML for visibility

--- a/Hours/templates/erfassen.html
+++ b/Hours/templates/erfassen.html
@@ -28,5 +28,10 @@
         {% endif %}
     </div>
 
+  <!-- FOOTER -->
+    <footer class="container">
+        <p>© 2017–2021 Raphael Urbanetz,</p>
+    </footer>
+
 </body>
 </html>
