--- a/Hours/templates/index.html
+++ b/Hours/templates/index.html
@@ -11,5 +11,42 @@
 </head>
 <body>
 
+<div class="container">
+    <h1>Hello and Welcome to the time reporting website of your company</h1>
+</div>
+  <div class="container contents">
+
+    <div class="row">
+      <div class="col-lg-4">
+        <svg class="home-center-nav" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Icons_Stopwatch" overflow="hidden"><circle cx="48" cy="33" r="2"/><circle cx="48" cy="73" r="2"/><circle cx="68" cy="52" r="2"/><circle cx="28" cy="52" r="2"/><path d="M50 38 46 38 46 52C46 52.5 46.2 53 46.6 53.4L56.5 63.3 59.3 60.5 50 51.2 50 38Z"/><path d="M48 81C32.5 81 20 68.5 20 53 20 37.5 32.5 25 48 25 63.5 25 76 37.5 76 53 76 68.5 63.5 81 48 81L48 81ZM71.7 28.6 74.7 25.6C75.8 24.4 75.8 22.6 74.6 21.4 73.5 20.3 71.6 20.2 70.4 21.3L67 24.8C62.2 21.6 56.7 19.6 51 19.2L51 15 60 15 60 9 36 9 36 15 45 15 45 19.1C29.1 20.5 16.3 32.8 14.3 48.7 12.3 64.6 21.6 79.7 36.7 85 51.8 90.3 68.5 84.5 77 70.9 85.5 57.3 83.1 39.7 71.7 28.6L71.7 28.6Z"/></svg>
+
+        <h2>Time submission</h2>
+        <p>To submit your daily working hours please use our newly developed time submission portal built just for you!</p>
+        <p><a class="btn btn-secondary" href="http://127.0.0.1:5000/submission">Submit time »</a></p>
+
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <svg class="home-center-nav" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Icons_MonthlyCalendar" overflow="hidden"><g><path d="M76 32 76 40 68 40 68 32 76 32ZM20 68 28 68 28 76 20 76 20 68ZM40 32 40 40 32 40 32 32 40 32ZM52 32 52 40 44 40 44 32 52 32ZM64 52 56 52 56 44 64 44 64 52ZM68 52 68 44 76 44 76 52 68 52ZM68 64 68 56 76 56 76 64 68 64ZM44 68 52 68 52 76 44 76 44 68ZM40 68 40 76 32 76 32 68 40 68ZM32 56 40 56 40 64 32 64 32 56ZM28 56 28 64 20 64 20 56 28 56ZM28 44 28 52 20 52 20 44 28 44ZM40 52 32 52 32 44 40 44 40 52ZM44 52 44 44 52 44 52 52 44 52ZM52 64 44 64 44 56 52 56 52 64ZM56 64 56 56 64 56 64 64 56 64ZM64 32 64 40 56 40 56 32 64 32ZM14 26 14 82 82 82 82 26 14 26Z"/><rect x="14" y="14" width="68" height="8"/></g></svg>
+
+        <h2>Working hours insight</h2>
+        <p>To gain an overview into your average and total hours worked and accumulated over-/undertime use your insights platform.</p>
+        <p><a class="btn btn-secondary" href="http://127.0.0.1:5000/insights">Get insights »</a></p>
+
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <svg class="home-center-nav" width="100" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Icons_BarChart_RTL" overflow="hidden"><g><path d="M76 14 82 14 82 82 14 82 14 76 76 76Z"/><rect x="59" y="35" width="11" height="35"/><rect x="44" y="14" width="11" height="56"/><rect x="29" y="35" width="11" height="35"/><rect x="14" y="52" width="11" height="18"/></g></svg>
+
+        <h2>Day by Day Overview</h2>
+        <p>To get an overview of your already submitted time entries or search for specific time entries use our aggregated submission overview.</p>
+        <p><a class="btn btn-secondary" href="http://127.0.0.1:5000/overview">Search Time submissions »</a></p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+  <!-- FOOTER -->
+  <footer class="container">
+    <p>© 2017–2021 Raphael Urbanetz,</p>
+  </footer>
+</div>
+
 </body>
 </html>
