--- a/Hours/templates/day_by_day.html
+++ b/Hours/templates/day_by_day.html
@@ -48,5 +48,10 @@ $(document).ready(function(){
 });
 </script>
 
+<!-- FOOTER -->
+    <footer class="container">
+        <p>© 2017–2021 Raphael Urbanetz,</p>
+    </footer>
+
 </body>
 </html>
