--- a/Hours/templates/insights.html
+++ b/Hours/templates/insights.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<div class="container"> <p>You have worked a total of {{ monthtime[(12)]|float }} hours in 2021 </p> </div>
+<div class="container"> <h3>Total submitted hours 2021</h3> <p>You have worked a total of {{ monthtime[(12)]|float }} hours in 2021 </p> </div>
 
-<div class="container"> <p>{{ viz_div|safe }} </p> </div>
+<div class="container"> <h3>Over-/ undertime overview</h3><p>{{ viz_div|safe }} </p> </div>
 
 <div class="container"> <p>You generated most overtime on {{ overtimedata[2] }} by working {{ overtimedata[1]|float }} hours - This is a {{ overtimedata[4] }} </p> </div>
 <!-- <div class="container"> <p>The month you generated most overtime was:  </p> </div> -->
@@ -29,7 +29,7 @@
     <p>Dear user. You have generate more than 40 working hours in overtime. Please contact HR to create a compensation plan</p> <a href="mailto:raphael@urbanetz.ch" target="_blank" class="btn btn-primary">Email Us</a>
 {% endif %} </div>
 
-<div class="container"> <p>This is your Total worktime overview and is calculated on the total amount of needed working
+<div class="container"> <h3>Total submitted working hours per month</h3> <p>This is your Total worktime overview and is calculated on the total amount of needed working
 hours for each month. At the end of the month you will see the total worked hours and aggregated overtime per month</p>
 </div>
 
@@ -106,6 +106,11 @@ hours for each month. At the end of the month you will see the total worked hour
       </tbody>
     </table>
 </div>
+
+  <!-- FOOTER -->
+    <footer class="container">
+        <p>© 2017–2021 Raphael Urbanetz,</p>
+    </footer>
 
 </body>
 </html>
