Moved Images into static folder, removed Bootstrap files as they are referenced via cdn link

--- a/Hours/templates/day_by_day.html
+++ b/Hours/templates/day_by_day.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 
 <!-- FOOTER -->
     <footer class="container">
-        <p>© 2017–2021 Raphael Urbanetz,</p>
+        <p>© 2021 Raphael Urbanetz,</p>
     </footer>
 
 </body>
