--- a/Hours/templates/index.html
+++ b/Hours/templates/index.html
@@ -44,7 +44,7 @@
 
   <!-- FOOTER -->
   <footer class="container">
-    <p>© 2017–2021 Raphael Urbanetz,</p>
+    <p>© 2021 Raphael Urbanetz,</p>
   </footer>
 </div>
 
