--- a/Hours/templates/insights.html
+++ b/Hours/templates/insights.html
@@ -109,7 +109,7 @@ hours for each month. At the end of the month you will see the total worked hour
 
   <!-- FOOTER -->
     <footer class="container">
-        <p>© 2017–2021 Raphael Urbanetz,</p>
+        <p>© 2021 Raphael Urbanetz,</p>
     </footer>
 
 </body>
