--- a/Hours/templates/insights.html
+++ b/Hours/templates/insights.html
@@ -19,13 +19,13 @@
 <!-- <div class="container"> <p>The month you generated most overtime was:  </p> </div> -->
 
 <div class="container"> <p>Your average over-/ undertime is: {{ overtimedata[3]|float }} hours </p>
-    {% if overtimedata[3] > 1.5|float %}
+    {% if overtimedata[3] > 1.5|float %} <!-- Once average overtime is above 1.5 hours following message will be visible -->
     <p>Hi there, it seems like you are making too much overtime on average. Be mindful of your work-life-balance! Make sure you contact your Manager to readjust your projects and not exceed 8 hours of work per day.
     If you want to learn more about our company policy on how to improve your work-life-balance please visit <a href="https://www.businessnewsdaily.com/5244-improve-work-life-balance-today.html" target="_blank"> Work-Life-Balance-Tips</a> </p>
 {% endif %} </div>
 
 <div class="container"> <p>Your total overtime is: {{ overtimedata[0]|float }} hours </p>
-    {% if overtimedata[0] > 40|float %}
+    {% if overtimedata[0] > 40|float %}  <!-- Once total overtime is above 40 hours following message will be visible -->
     <p>Dear user. You have generate more than 40 working hours in overtime. Please contact HR to create a compensation plan</p> <a href="mailto:raphael@urbanetz.ch" target="_blank" class="btn btn-primary">Email Us</a>
 {% endif %} </div>
 
